--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://blog.atomer.club
 root: /
-permalink: :/category/:year/:month/:day/:title/
+permalink: :category/:year/:month/:day/:title/
 permalink_defaults:
 
 # Directory
