--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 侃聊
 subtitle: 一本正经的胡说前端
 description: 前端那些事
 author: Atomer Fang
-language: zh-CN
+language: zh-Hans
 timezone: Asia/Shanghai
 
 # URL
@@ -72,9 +72,10 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: mirage
+theme: yelee
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+  
