--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 侃聊
+title: Atomer
 subtitle: 一本正经滴胡说前端
 description: 前端那些事
 author: Atomer Fang
